GTNPORTAL-3304 White background in Edit Mode dialogs for AppRegistry and Dashboard Portlets GTNPORTAL-3302 Broken CSS in admin pages title - Small fix GTNPORTAL-3303 UIIFramePortlet always in Edit mode

--- a/portlet/exoadmin/src/main/webapp/skin/applicationregistry/webui/component/UIApplicationRegistryPortlet/DefaultStylesheet.css
+++ b/portlet/exoadmin/src/main/webapp/skin/applicationregistry/webui/component/UIApplicationRegistryPortlet/DefaultStylesheet.css
@@ -28,7 +28,7 @@
 	overflow: visible;
 }
 
-.UIApplicationRegistryPortlet {
+.UIApplicationRegistryPortlet.view {
 	overflow: auto;
 	background: white;
 }
