--- a/portlet/web/src/main/webapp/skin/portal/webui/component/UIIFramePortlet/DefaultStylesheet.css
+++ b/portlet/web/src/main/webapp/skin/portal/webui/component/UIIFramePortlet/DefaultStylesheet.css
@@ -17,7 +17,7 @@
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  */
 
-.UIIFramePortlet.ViewMode {
+.UIIFramePortlet.view {
 	border: 1px solid #b7b7b7;
 	background: white;
 	margin: 7px;
